// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat reducers AGENTS_AVAILABLE updates state with the new value 1`] = `
Object {
  "agentEndedConversation": false,
  "agentTyping": false,
  "agentsAvailable": undefined,
  "chatContainerHidden": true,
  "chatIsSpam": false,
  "chatLauncherHidden": true,
  "configuration": Object {
    "enableChatEmailTranscript": false,
    "enableChatFileAttachments": false,
    "enableEmojis": false,
    "flashNotificationOnNewMessage": false,
    "playSoundOnNewMessage": false,
    "registrationForm": undefined,
    "supportedAttachmentTypes": Array [
      "image/png,image/jpeg",
    ],
  },
  "initializedState": "uninitialized",
  "isAgentAssigned": false,
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Array [],
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;

exports[`chat reducers AGENTS_AVAILABLE updates state with the new value 2`] = `
Object {
  "agentEndedConversation": false,
  "agentTyping": false,
  "agentsAvailable": undefined,
  "chatContainerHidden": true,
  "chatIsSpam": false,
  "chatLauncherHidden": true,
  "configuration": Object {
    "enableChatEmailTranscript": false,
    "enableChatFileAttachments": false,
    "enableEmojis": false,
    "flashNotificationOnNewMessage": false,
    "playSoundOnNewMessage": false,
    "registrationForm": undefined,
    "supportedAttachmentTypes": Array [
      "image/png,image/jpeg",
    ],
  },
  "initializedState": "uninitialized",
  "isAgentAssigned": false,
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Array [],
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;

exports[`chat reducers NEW_WEBCHAT_SESSION updates state with initial state merged with current visibility state and "initialized" set to "LOADING" 1`] = `
Object {
  "agentEndedConversation": false,
  "agentTyping": false,
  "agentsAvailable": true,
  "chatContainerHidden": false,
  "chatIsSpam": false,
  "chatLauncherHidden": false,
  "configuration": Object {
    "enableChatEmailTranscript": false,
    "enableChatFileAttachments": false,
    "enableEmojis": false,
    "flashNotificationOnNewMessage": false,
    "playSoundOnNewMessage": false,
    "registrationForm": undefined,
    "supportedAttachmentTypes": Array [
      "image/png,image/jpeg",
    ],
  },
  "initializedState": "loading",
  "isAgentAssigned": false,
  "messageFieldFocused": false,
  "muteSounds": false,
  "platformEvents": Array [],
  "transcript": Object {},
  "welcomeFormRegistered": false,
}
`;
